--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: ruby
+cache: bundler
+sudo: false
 rvm:
-  - 1.9.3
-  - 1.9.2
-  - jruby-19mode
-  - rbx-19mode
+  - 2.0
+  - 2.1
+  - 2.2
+  - jruby-9.0.1.0
   - ruby-head
   - jruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
